fix: google auh done

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@fortawesome/react-fontawesome": "latest",
     "@mui/material": "latest",
     "@mui/styled-engine": "^6.4.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.48.0",
     "@testing-library/react": "^16.2.0",
     "cra-template-typescript": "1.2.0",
     "framer-motion": "latest",
